--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
   <header>
     <div class="header-top">
-      <a href="https://me76210356ltkm5.github.io/ideal-machine/" style="text-decoration:none" class="tag">Home</a><a class="tag">Menu</a><a href="https://me76210356ltkm5.github.io/ideal-machine#sixth" class="tag">Access</a><a
+      <a href="https://me76210356ltkm5.github.io/ideal-machine/" style="text-decoration:none" class="tag">Home</a><a href="https://me76210356ltkm5.github.io/ideal-machine/" class="tag">Menu</a><a href="https://me76210356ltkm5.github.io/ideal-machine#sixth" class="tag">Access</a><a
         href="https://me76210356ltkm5.github.io/ideal-machine#seventh" class="tag">Reservetion</a><a href="https://me76210356ltkm5.github.io/ideal-machine3/" class="tag">Party</a><a class="Select-tag ">PointCard</a><a
         href="https://me76210356ltkm5.github.io/ideal-machine#ninth" class="Recruit-tag tag">Recruit</a>
     </div>
